--- a/main.css
+++ b/main.css
@@ -34,3 +34,16 @@ button:hover{
     background-size: 400%;
     box-shadow: 0 0 15px rgba(2, 4, 24);
 }
+button::before{
+    content: '';
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    bottom: -1px;
+    left: -1px;
+    background: inherit;
+    filter: blur(36px);
+    z-index: -1;
+    opacity: 0;
+    transition: .4s ease-out;
+}
